--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,8 +4,8 @@ metadata:
   name: backstage
   description: |
     Backstage is an open-source developer portal that puts the developer experience first.
-  annotations:
-    sonarqube.org/project-key: absamonyglobvalidator
+  #annotations:
+  #  sonarqube.org/project-key: absamonyglobvalidator
 spec:
   type: library
   owner: cicd
