--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,12 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: backstage
+  name: Cellulant Sonar
   description: |
-    Backstage is an open-source developer portal that puts the developer experience first.
+    Backstage working with SoanrQube.
   annotations:
     sonarqube.org/project-key: absamonyglobvalidator
 spec:
   type: library
   owner: cicd
-  lifecycle: experimental
+  lifecycle: testing
