--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,8 @@ metadata:
   description: |
     Backstage working with SoanrQube.
   annotations:
-    sonarqube.org/project-key: absamonyglobvalidator
+    #sonarqube.org/project-key: absamonyglobvalidator
+    sonarqube.org/project-key:
 spec:
   type: library
   owner: cicd
