--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     #sonarqube.org/project-key: absamonyglobvalidator
     sonarqube.org/project-key: absa-ghana-self-registration-menu
-    sonarqube.org/project-key: absamonyglobvalidator
+    #sonarqube.org/project-key: absamonyglobvalidator
 spec:
   type: library
   owner: cicd
